--- a/promethee/WebContent/updateTender.xhtml
+++ b/promethee/WebContent/updateTender.xhtml
@@ -21,9 +21,7 @@
 				<td>Sumber Dana :</td>
 				<td><h:inputText value="#{tender.sumberDana}"/></td>
 				<td>Tahun :</td>
-				<td><h:inputText value="#{tender.tahun}">
-						<f:convertDateTime pattern="dd-MM-yyyy"/>
-					</h:inputText>
+				<td><h:inputText value="#{tender.tahun}"/>
 				</td>
 			</tr>
 			<tr>
